[gd_scene load_steps=13 format=3 uid="uid://br0mek24tjxjd"]

[ext_resource type="Script" path="res://gameFiles/player/PlayerController.gd" id="1_rd8md"]
[ext_resource type="Texture2D" uid="uid://wa3mrydadsf5" path="res://res/sprites/player/anim3.png" id="2_j4gy4"]
[ext_resource type="PackedScene" uid="uid://cpl7grpuid6sp" path="res://gameFiles/player/systems/inventory/inventory_UI.tscn" id="5_pgo2r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rtsqo"]
atlas = ExtResource("2_j4gy4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w80a8"]
atlas = ExtResource("2_j4gy4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqetf"]
atlas = ExtResource("2_j4gy4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vxq0"]
atlas = ExtResource("2_j4gy4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgapt"]
atlas = ExtResource("2_j4gy4")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mi0f"]
atlas = ExtResource("2_j4gy4")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6rndk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtsqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w80a8")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqetf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vxq0")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgapt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mi0f")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jm14j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4w2lg"]
radius = 38.3275

[node name="Area2D" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 8
script = ExtResource("1_rd8md")
speed = 100

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_6rndk")
animation = &"up"

[node name="Collision" type="CollisionShape2D" parent="."]
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_jm14j")

[node name="EntityCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntityCollision"]
shape = SubResource("CircleShape2D_4w2lg")

[node name="inventory_UI" parent="." instance=ExtResource("5_pgo2r")]
visible = false
z_index = 10

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="body_entered" from="EntityCollision" to="." method="_on_body_entered"]
[connection signal="body_exited" from="EntityCollision" to="." method="_on_body_exited"]
